# SugarConvDsk

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakelists.txt  README.md  appveyor.yml
CPCCoreEmu/: CAPSFile.cpp  CAPSFile.h  CRC.cpp  CRC.h  DiskBuilder.cpp  DiskBuilder.h  DiskContainer.cpp  DiskContainer.h  DiskGen.cpp  DiskGen.h  DskTypeManager.h  FDC765.h  FileAccess.cpp  FileAccess.h  FormatTypeCTRAW.cpp  FormatTypeCTRAW.h  FormatTypeDSK.cpp  FormatTypeDSK.h  FormatTypeEDSK.cpp  FormatTypeEDSK.h  FormatTypeHFE.h  FormatTypeIPF.cpp  FormatTypeIPF.h  FormatTypeRAW.cpp  FormatTypeRAW.h  FormatTypeSCP.cpp  FormatTypeSCP.h  IDisk.cpp  IDisk.h  ILoadingProgress.h  ILog.h  MediaManager.cpp  MediaManager.h  macro.h  stdafx.h
SugarConvDsk/: CMakeLists.txt  includes.h  main.cpp
Tests/: CMakeLists.txt  CMakelists.txt  test.cpp
Tests/Expected/: SugarConvHelp.txt
